--- a/index.html
+++ b/index.html
@@ -2,375 +2,345 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Joe Nithin | Portfolio</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+<title>Joe Nithin S | AI & Web Developer</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-/* ========== RESET ========== */
-*{margin:0;padding:0;box-sizing:border-box}
-
-/* ========== THEME ========== */
-:root{
-  --bg:#020617;
-  --card:#020b24;
-  --border:#1e293b;
-  --text:#e5e7eb;
-  --muted:#9ca3af;
-  --accent:#2563eb;
-  --radius:18px;
-  --font:system-ui,-apple-system,"Segoe UI",sans-serif;
+/* ================= RESET ================= */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Segoe UI", Arial, sans-serif;
 }
 
-body{
-  font-family:var(--font);
-  background:radial-gradient(circle at top,#0b1120,#020617 40%,#000);
-  color:var(--text);
+html { scroll-behavior: smooth; }
+
+body {
+  background: radial-gradient(circle at top, #020617, #000);
+  color: #e5e7eb;
 }
 
-/* ========== LAYOUT ========== */
-.container{
-  width:min(1100px,100% - 2rem);
-  margin:auto;
+/* ================= NAVBAR ================= */
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding: 18px 8%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: rgba(0,0,0,0.75);
+  z-index: 100;
 }
 
-.section{padding:60px 0}
-
-/* ========== HEADER ========== */
-.site-header{
-  position:sticky;
-  top:0;
-  background:rgba(2,6,23,.9);
-  backdrop-filter:blur(12px);
-  border-bottom:1px solid var(--border);
-  z-index:10;
+.brand {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
-.nav-inner{
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  height:70px;
+.circle {
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  background: #0f172a;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.brand{
-  display:flex;
-  gap:10px;
-  align-items:center;
-  text-transform:uppercase;
-  letter-spacing:.15em;
-  font-size:.85rem;
-  color:var(--muted);
+nav a {
+  margin-left: 25px;
+  text-decoration: none;
+  color: #cbd5f5;
+  font-size: 0.95rem;
 }
 
-.brand-initial{
-  width:28px;height:28px;
-  border-radius:50%;
-  border:1px solid var(--border);
-  display:grid;place-items:center;
+nav a.active {
+  color: #38bdf8;
 }
 
-.brand-name span{color:#60a5fa}
-
-.nav-links{
-  display:flex;
-  list-style:none;
-  gap:2rem;
+/* ================= HERO ================= */
+.hero {
+  padding: 140px 8% 90px;
 }
 
-.nav-links a{
-  text-decoration:none;
-  color:var(--muted);
-  font-size:.85rem;
+.tag {
+  display: inline-block;
+  padding: 6px 14px;
+  border-radius: 20px;
+  background: #020617;
+  border: 1px solid #1e293b;
+  margin-bottom: 20px;
+  font-size: 0.85rem;
 }
 
-.nav-links a:hover{color:var(--text)}
-
-.nav-toggle{
-  display:none;
-  background:none;
-  border:none;
-  cursor:pointer;
+.hero h1 {
+  font-size: 3rem;
+  margin-bottom: 10px;
 }
 
-.nav-toggle span{
-  display:block;
-  width:22px;height:2px;
-  margin:4px;
-  background:#fff;
+.hero p {
+  max-width: 520px;
+  color: #9ca3af;
 }
 
-/* ========== HERO ========== */
-.hero{padding:90px 0}
-.hero-badge{
-  display:inline-flex;
-  gap:8px;
-  align-items:center;
-  border:1px solid var(--border);
-  padding:6px 18px;
-  border-radius:999px;
-  font-size:.75rem;
-  letter-spacing:.18em;
-  color:var(--muted);
+.buttons {
+  margin-top: 25px;
 }
 
-.dot{
-  width:8px;height:8px;
-  border-radius:50%;
-  background:#22c55e;
+.primary {
+  background: linear-gradient(90deg, #38bdf8, #3b82f6);
+  border: none;
+  padding: 12px 28px;
+  border-radius: 30px;
+  color: #000;
+  font-weight: 600;
+  margin-right: 10px;
+  cursor: pointer;
 }
 
-.hero-title{
-  margin-top:28px;
-  font-size:clamp(2.4rem,4vw,3.2rem);
+.secondary {
+  background: transparent;
+  border: 1px solid #334155;
+  padding: 12px 28px;
+  border-radius: 30px;
+  color: #e5e7eb;
+  cursor: pointer;
 }
 
-.hero-subtitle{
-  margin-top:14px;
-  color:var(--muted);
-  max-width:550px;
+.socials {
+  margin-top: 25px;
 }
 
-.hero-actions{
-  margin-top:30px;
-  display:flex;
-  gap:16px;
-  flex-wrap:wrap;
+.socials a {
+  margin-right: 20px;
+  color: #cbd5f5;
+  text-decoration: none;
 }
 
-.btn{
-  padding:.75rem 1.7rem;
-  border-radius:999px;
-  border:1px solid transparent;
-  text-decoration:none;
-  font-size:.9rem;
+/* ================= SECTIONS ================= */
+section {
+  padding: 80px 8%;
 }
 
-.btn-primary{
-  background:linear-gradient(135deg,#38bdf8,#2563eb);
-  color:#fff;
+/* ================= PROJECTS ================= */
+.project-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px,1fr));
+  gap: 25px;
+  margin-top: 30px;
 }
 
-.btn-ghost{
-  border:1px solid var(--border);
-  color:#fff;
+.card {
+  background: #020617;
+  border-radius: 16px;
+  padding: 26px;
+  border: 1px solid #1e293b;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.hero-social{
-  margin-top:28px;
-  display:flex;
-  gap:16px;
+.card:hover {
+  transform: translateY(-8px);
+  box-shadow: 0 20px 40px rgba(56,189,248,0.15);
 }
 
-.hero-social a{
-  display:flex;
-  gap:8px;
-  align-items:center;
-  text-decoration:none;
-  color:var(--muted);
-  border:1px solid var(--border);
-  padding:8px 14px;
-  border-radius:999px;
+.card span {
+  color: #38bdf8;
+  font-size: 0.85rem;
 }
 
-.hero-social a:hover{color:#fff}
-
-/* ========== CARDS ========== */
-.cards-grid{
-  margin-top:30px;
-  display:grid;
-  grid-template-columns:repeat(3,1fr);
-  gap:24px;
+/* ================= SKILLS ================= */
+.skills-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px,1fr));
+  gap: 25px;
+  margin-top: 30px;
 }
 
-.card{
-  background:var(--card);
-  border:1px solid var(--border);
-  border-radius:var(--radius);
-  padding:22px;
+.skill-card {
+  background: #020617;
+  border-radius: 16px;
+  padding: 26px;
+  border: 1px solid #1e293b;
 }
 
-.card h3{margin-bottom:8px}
-.card-text{color:var(--muted);font-size:.9rem}
-.card-meta{margin-top:8px;font-size:.8rem;color:#93c5fd}
-
-/* ========== SKILLS ========== */
-.skills-grid{
-  margin-top:24px;
-  display:grid;
-  grid-template-columns:repeat(3,1fr);
-  gap:24px;
+.skill-icon {
+  width: 48px;
+  height: 48px;
+  border-radius: 12px;
+  background: linear-gradient(135deg, #38bdf8, #3b82f6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+  color: #000;
+  margin-bottom: 14px;
 }
 
-.skill-column{
-  background:var(--card);
-  border:1px solid var(--border);
-  padding:20px;
-  border-radius:var(--radius);
+/* ================= CONTACT ================= */
+.contact {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 40px;
 }
 
-.skill-column h3{
-  font-size:.85rem;
-  text-transform:uppercase;
-  color:var(--muted);
-  margin-bottom:10px;
-}
-
-/* ========== CONTACT ========== */
-.contact-inner{
-  display:grid;
-  grid-template-columns:1.2fr 1fr;
-  gap:32px;
-}
-
-.contact-form{
-  background:var(--card);
-  border:1px solid var(--border);
-  padding:22px;
-  border-radius:var(--radius);
-  display:grid;
-  gap:12px;
+.contact-form {
+  background: #020617;
+  border: 1px solid #1e293b;
+  border-radius: 16px;
+  padding: 30px;
 }
 
 .contact-form input,
-.contact-form textarea{
-  background:#020617;
-  border:1px solid var(--border);
-  border-radius:10px;
-  padding:10px;
-  color:#fff;
+.contact-form textarea {
+  width: 100%;
+  margin-bottom: 15px;
+  padding: 12px;
+  border-radius: 8px;
+  border: 1px solid #1e293b;
+  background: #020617;
+  color: #fff;
 }
 
-/* ========== FOOTER ========== */
-footer{
-  text-align:center;
-  padding:28px 0;
-  color:#6b7280;
-  font-size:.8rem;
+.contact-form button {
+  width: 100%;
+  padding: 12px;
+  background: linear-gradient(90deg,#38bdf8,#3b82f6);
+  border: none;
+  border-radius: 25px;
+  font-weight: 600;
+  cursor: pointer;
 }
 
-/* ========== RESPONSIVE ========== */
-@media(max-width:900px){
-  .cards-grid,.skills-grid{grid-template-columns:1fr 1fr}
-  .contact-inner{grid-template-columns:1fr}
+/* ================= FOOTER ================= */
+footer {
+  text-align: center;
+  padding: 20px;
+  color: #9ca3af;
 }
 
-@media(max-width:640px){
-  .nav-links{
-    display:none;
-    position:absolute;
-    top:70px;right:1rem;
-    background:#020617;
-    flex-direction:column;
-    padding:1rem 1.5rem;
-    border-radius:16px;
-    border:1px solid var(--border);
+/* ================= RESPONSIVE ================= */
+@media(max-width: 900px){
+  .contact {
+    grid-template-columns: 1fr;
   }
-  .nav-links.open{display:flex}
-  .nav-toggle{display:block}
-  .cards-grid,.skills-grid{grid-template-columns:1fr}
 }
 </style>
 </head>
 
 <body>
 
-<header class="site-header">
-  <div class="container nav-inner">
-    <div class="brand">
-      <span class="brand-initial">J</span>
-      <span class="brand-name">Joe <span>Nithin</span></span>
-    </div>
-
-    <nav>
-      <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-      <button class="nav-toggle" id="navToggle">
-        <span></span><span></span><span></span>
-      </button>
-    </nav>
+<header class="navbar">
+  <div class="brand">
+    <div class="circle">J</div>
+    <span>JOE <b>NITHIN</b></span>
   </div>
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#projects">Projects</a>
+    <a href="#skills">Skills</a>
+    <a href="#contact">Contact</a>
+  </nav>
 </header>
 
 <section id="home" class="hero">
-  <div class="container">
-    <div class="hero-badge"><span class="dot"></span> CSE • AI & Robotics</div>
-    <h1 class="hero-title">Hi, I'm Joe Nithin</h1>
-    <p class="hero-subtitle">
-      2nd year Computer Science student building Web, AI & IoT projects.
-    </p>
+  <span class="tag">● CSE • AI & Robotics</span>
+  <h1>I'm Joe Nithin S</h1>
+  <p>2nd year AI & Robotics student building Web and AI projects.</p>
 
-    <div class="hero-actions">
-      <a href="#projects" class="btn btn-primary">View Projects</a>
-      <a href="#contact" class="btn btn-ghost">Contact Me</a>
+  <div class="buttons">
+    <button class="primary">View Projects</button>
+    <button class="primary">Contact Me</button>
+  </div>
+
+  <div class="socials">
+    <button class="secondary"><a href="https://github.com/joenithin007" target="_blank">  GitHub</a></button>
+    <button class="secondary"><a href="https://www.linkedin.com/in/joe-nithin-s" target="_blank">LinkedIn</a></button>
+  </div>
+</section>
+
+<section id="projects">
+  <h2>Projects</h2>
+  <div class="project-grid">
+    <div class="card">
+      <h3>Face Detection & Person Recognition</h3>
+      <p>Real-time AI system with stored person details.</p><br>
+      <b><a href="https://github.com/joenithin007/real_time-person-detection-app" target="_blank"><span>Python • OpenCV • Firebase</span></a></b>
     </div>
-
-    <div class="hero-social">
-      <a href="https://github.com/joenithin007" target="_blank">
-        <i class="fab fa-github"></i> GitHub
-      </a>
-      <a href="https://linkedin.com/in/joe-nithin-s" target="_blank">
-        <i class="fab fa-linkedin"></i> LinkedIn
-      </a>
+    <div class="card">
+      <h3>Smart Home Surveillance</h3>
+      <p>AI-based home security system.</p><br>
+      <b><a href="https://github.com/joenithin007/face-recognition-project" target="_blank"><span>AI • Computer Vision</span></a></b>
+    </div>
+    <div class="card">
+      <h3>Lost & Found Web App</h3>
+      <p>Secure web app with real-time database.</p><br>
+      <b><a href="https://joenithin007.github.io/Lost-and-Find/" target="_blank"><span>HTML • CSS • JavaScript • Firebase</span></a></b>
     </div>
   </div>
 </section>
 
-<section id="projects" class="section">
-  <div class="container">
-    <h2>Projects</h2>
-    <div class="cards-grid">
-      <div class="card">
-        <h3>Face Recognition Attendance</h3>
-        <p class="card-text">Automated attendance using OpenCV</p>
-        <p class="card-meta">Python • OpenCV</p>
-      </div>
-      <div class="card">
-        <h3>IoT Home Automation</h3>
-        <p class="card-text">ESP32 based smart home system</p>
-        <p class="card-meta">ESP32 • JavaScript</p>
-      </div>
-      <div class="card">
-        <h3>Task Manager</h3>
-        <p class="card-text">Full stack MERN app</p>
-        <p class="card-meta">React • Node.js</p>
-      </div>
-    </div>
+<section id="skills">
+  <h2>Skills</h2>
+  <div class="skills-grid">
+    <div class="skill-card"><div class="skill-icon">🐍</div><h3>Python</h3><p>Programming & AI logic</p></div>
+    <div class="skill-card"><div class="skill-icon">👁️</div><h3>OpenCV</h3><p>Computer Vision systems</p></div>
+    <div class="skill-card"><div class="skill-icon">🌐</div><h3>Web Development</h3><p>HTML, CSS & JavaScript</p></div>
+    <div class="skill-card"><div class="skill-icon">🔥</div><h3>Firebase</h3><p>Auth & Cloud backend</p></div>
   </div>
 </section>
 
-<section id="contact" class="section">
-  <div class="container contact-inner">
-    <div>
-      <h2>Contact Me</h2>
-      <p>Email: joenithin007@gmail.com</p>
-    </div>
-
-    <form class="contact-form" id="contactForm">
-      <input type="hidden" name="access_key" value="48c1a827-75ea-44a5-af1b-85a159d85013">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" placeholder="Your Message" required></textarea>
-      <button class="btn btn-primary">Send Message</button>
-    </form>
+<section id="contact" class="contact">
+  <div>
+    <h2>Contact Me</h2>
+    <p>Email: <b>joenithin007@gmail.com</b></p>
+    <p>Phone: <b>+91-9043645695</b></p>
   </div>
+
+  <form class="contact-form" id="contactForm">
+    <input type="hidden" name="access_key" value="48c1a827-75ea-44a5-af1b-85a159d85013">
+    <input type="hidden" name="to_email" value="joenithin007@gmail.com">
+    <input type="hidden" name="subject" value="New Portfolio Contact Message">
+
+    <input type="text" name="name" placeholder="Your Name" required>
+    <input type="email" name="email" placeholder="Your Email" required>
+    <textarea name="message" placeholder="Your Message" required></textarea>
+    <button type="submit">Send Message</button>
+  </form>
 </section>
 
-<footer>
-  © 2025 Joe Nithin. All rights reserved.
-</footer>
+<footer>© 2026 Joe Nithin</footer>
 
 <script>
-const navToggle=document.getElementById("navToggle");
-const navLinks=document.querySelector(".nav-links");
-navToggle.onclick=()=>navLinks.classList.toggle("open");
+/* Smooth scroll */
+document.querySelectorAll("nav a").forEach(link=>{
+  link.onclick=e=>{
+    e.preventDefault();
+    document.querySelector(link.getAttribute("href"))
+      .scrollIntoView({behavior:"smooth"});
+  }
+});
 
+/* Buttons */
+document.querySelector(".primary").onclick=()=>document.querySelector("#projects").scrollIntoView({behavior:"smooth"});
+document.querySelector(".secondary").onclick=()=>document.querySelector("#contact").scrollIntoView({behavior:"smooth"});
+
+/* Active nav */
+const sections=document.querySelectorAll("section");
+const navLinks=document.querySelectorAll("nav a");
+window.addEventListener("scroll",()=>{
+  let current="";
+  sections.forEach(sec=>{
+    if(scrollY>=sec.offsetTop-150) current=sec.id;
+  });
+  navLinks.forEach(a=>{
+    a.classList.toggle("active",a.getAttribute("href")==="#"+current);
+  });
+});
+
+/* REAL EMAIL SEND (Web3Forms) */
 document.getElementById("contactForm").addEventListener("submit",async e=>{
   e.preventDefault();
   const form=e.target;
@@ -379,18 +349,14 @@ document.getElementById("contactForm").addEventListener("submit",async e=>{
   btn.disabled=true;
 
   try{
-    const res=await fetch("https://api.web3forms.com/submit",{
-      method:"POST",
-      body:new FormData(form)
-    });
-    alert(res.ok?"Message sent successfully!":"Error sending message");
-    form.reset();
+    const res=await fetch("https://api.web3forms.com/submit",{method:"POST",body:new FormData(form)});
+    alert(res.ok?"Message sent successfully!":"Failed to send message");
+    if(res.ok) form.reset();
   }catch{
     alert("Network error");
-  }finally{
-    btn.textContent="Send Message";
-    btn.disabled=false;
   }
+  btn.textContent="Send Message";
+  btn.disabled=false;
 });
 </script>
 
